put grafna setup into its own folder
feature proofing for pre-configured dashboard

see https://ops.tips/blog/initialize-grafana-with-preconfigured-dashboards/

see https://github.com/cirocosta/sample-grafana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
     networks:
       - redis_cluster_network
   grafana:
-    image: grafana/grafana
+    build: ./grafana
     ports:
       - 3000:3000
     depends_on:
