--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,32 @@
 version: "3"
 services:
   redis_1:
-    image: redis:5
-    command: redis-server /usr/local/etc/redis/redis.conf
-    volumes:
-      - ./config/cluster-config.conf:/usr/local/etc/redis/redis.conf
+    build: ./redis
     networks:
       redis_cluster_network:
         ipv4_address: 172.19.197.2
   redis_2:
-    image: redis:5
-    command: redis-server /usr/local/etc/redis/redis.conf
-    volumes:
-      - ./config/cluster-config.conf:/usr/local/etc/redis/redis.conf
+    build: ./redis
     networks:
       redis_cluster_network:
         ipv4_address: 172.19.197.3
   redis_3:
-    image: redis:5
-    command: redis-server /usr/local/etc/redis/redis.conf
-    volumes:
-      - ./config/cluster-config.conf:/usr/local/etc/redis/redis.conf
+    build: ./redis
     networks:
       redis_cluster_network:
         ipv4_address: 172.19.197.4
   redis_4:
-    image: redis:5
-    command: redis-server /usr/local/etc/redis/redis.conf
-    volumes:
-      - ./config/cluster-config.conf:/usr/local/etc/redis/redis.conf
+    build: ./redis
     networks:
       redis_cluster_network:
         ipv4_address: 172.19.197.5
   redis_5:
-    image: redis:5
-    command: redis-server /usr/local/etc/redis/redis.conf
-    volumes:
-      - ./config/cluster-config.conf:/usr/local/etc/redis/redis.conf
+    build: ./redis
     networks:
       redis_cluster_network:
         ipv4_address: 172.19.197.6
   redis_6:
-    image: redis:5
-    command: redis-server /usr/local/etc/redis/redis.conf
-    volumes:
-      - ./config/cluster-config.conf:/usr/local/etc/redis/redis.conf
+    build: ./redis
     networks:
       redis_cluster_network:
         ipv4_address: 172.19.197.7
